# pulse

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/design/: README.md  architecture.md  chunking.md  cli.md  merge-and-overlap.md  network-model.md  primitives.md  rest-api.md  scope.md  server-spec.md  storage-engine.md  websocket-api.md
examples/server/: .gitignore  README.md  package.json
examples/server/src/: db.ts  hash.ts  index.ts
examples/server/src/routes/: diff.ts  files.ts  main.ts  objects.ts  repo.ts  sync.ts  trunk.ts  workspaces.ts
src/: config.rs  main.rs
src/client/: buffer.rs  http.rs  mod.rs
src/core/: diff.rs  main_ref.rs  merge.rs  mod.rs  overlap.rs  primitives.rs  trunk.rs  workspace.rs
src/server/: error.rs  mod.rs  state.rs  ws.rs
src/server/routes/: diff.rs  files.rs  mod.rs  objects.rs  repo.rs  transfer.rs  trunk.rs  workspaces.rs
src/storage/: chunker.rs  codec.rs  compaction.rs  engine.rs  index.rs  log.rs  mod.rs  pipeline.rs
tests/: integration.rs
website/: astro.config.mjs  package.json
website/src/components/: CliShowcase.astro  Cta.astro  Features.astro  Footer.astro  Hero.astro  HowItWorks.astro  Nav.astro
website/src/content/docs/docs/: installation.mdx  introduction.mdx  quickstart.mdx
website/src/content/docs/docs/architecture/: overview.mdx
website/src/content/docs/docs/cli/: commit.mdx  init.mdx  merge.mdx  status-log-diff.mdx  workspace.mdx
website/src/layouts/: Landing.astro
website/src/pages/: index.astro
website/src/styles/: docs.css  global.css
(+6 files in other folders)
